# nyc-night-signals-atlas

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: params.yml  weights.yml
data/processed/atlas/: 311_cd_features.csv  311_cd_features.geojson  311_cd_features.parquet  311_nta_features.csv  311_nta_features.parquet  (+3 more)
docs/: cd_typology.html  hotspots.html  index.html  nta_typology.html
scripts/: 00_build_geographies.py  01_build_crosswalks.py  02_fetch_311_noise.py  03_build_311_night_features.py  03_build_noise_311.py  04_build_noise_objective.py  05_build_light_viirs.py  05_build_typology.py  06_build_heat.py  06_build_hotspots.py  06b_hotspot_investigation.py  06c_hotspot_sensitivity.py  07_build_air.py  07_build_heat_sensitivity.py  08_build_index.py  08a_build_stability_assets.py  08b_build_typology_assets.py  08c_build_interactive_maps.py  09_build_nta.py  09_equity_analysis.py  10_build_311_nta_features.py  10_validation.py  11_build_nta_typology.py  12_build_temporal_stability.py  13_build_outcomes.py  download_prism_tmin.sh
src/sleep_esi/: __init__.py  acoustics.py  hashing.py  io_utils.py  joins.py  logging_utils.py  paths.py  qa.py  raster_utils.py  schemas.py  time_utils.py
tests/: __init__.py  test_311_features.py  test_cd_lookup.py  test_heat_sensitivity.py  test_hotspot_investigation.py  test_hotspot_sensitivity.py  test_hotspots.py  test_nta.py  test_nta_features.py  test_nta_typology.py  test_outcomes.py  test_paths.py  test_stability_assets.py  test_temporal_stability.py  test_typology.py  test_typology_assets.py
(+78 files in other folders)
